Added in cue swapping

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -2,7 +2,7 @@
     [ ] - Copy the Audio Files
     [ ] - Write the Text Files
  [ ] - Make Loading Work
- [ ] - Cue Swapping
+ [x] - Cue Swapping
  [ ] - Dark Style
  [ ] - Adjust Volume Level
     [ ] - Fade In
