--- a/src/todo.txt
+++ b/src/todo.txt
@@ -7,7 +7,7 @@
  [x] - Create new cue <INSERT BEFORE> should be end of show by default
  [x] - Create new cue <INSERT BEFORE> should have new text.
  [x] - Create new cue <IMPORT!> should be <CREATE!>
- [ ] - Cue table numbers should start at 1
+ [x] - Cue table numbers should start at 1
  [ ] - Dark Style
  [ ] - Looping
  [ ] - Adjust Volume Level
