--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,6 +1,10 @@
  [X] - Make Saving Work
     [X] - Copy the Audio Files
     [x] - Write the Text Files
+ [ ] - Write the Online Help Documents
+ [ ] - Make the Error Dialog look more errorish
+ [ ] - Make the Dialogs expand to fit their contents
+ [ ] - Make a dedicated About Dialog
  [x] - Make Loading Work
  [ ] - Use something other than null for setParentElement;
  [x] - Cue Swapping
