--- a/src/com/coolkev/syncedplay/todo.txt
+++ b/src/com/coolkev/syncedplay/todo.txt
@@ -6,7 +6,7 @@
  [ ] - Make the Dialogs expand to fit their contents
  [ ] - Make a dedicated About Dialog
  [x] - Make Loading Work
- [ ] - Use something other than null for setParentElement;
+ [?] - Use something other than null for setParentElement;
  [x] - Cue Swapping
  [x] - Save and load should pop up GUI dialogs that make more sense.
  [x] - Create new cue <INSERT BEFORE> should be end of show by default
