Did cool stuff. Added in Looping. Cleaned up a bunch of unused imports. Added in a panic action (like so you can use it in a cue).

--- a/src/com/coolkev/syncedplay/todo.txt
+++ b/src/com/coolkev/syncedplay/todo.txt
@@ -13,7 +13,8 @@
  [x] - Cue table numbers should start at 1
  [ ] - Dark Style
     [x] - Find something awesome that will totally help with this
- [ ] - Looping
+ [x] - Looping
+ [x] - Panic Action
  [ ] - Adjust Volume Level
     [ ] - Fade In
     [ ] - Fade Out
