Stopped working with threads, and now I'm working with Runnables in the SoundTableModel.

--- a/src/com/coolkev/syncedplay/Manual.tex
+++ b/src/com/coolkev/syncedplay/Manual.tex
@@ -13,7 +13,7 @@
 
 \section{Introducing Synced Play}
 
-Synced Play is a program developed to let a user playback sound effects
+Synced Play is a program developed to let users playback sound effects
 at certain times during a theatrical performance. It is designed to
 playback sounds with very low overhead (so as to make playback much snappier)
 and to offer the option to loop sounds until told to stop. It also has a
@@ -70,7 +70,8 @@ start to loop a sound right now, it would loop forever! MWAHAHA!}
 It takes the form ``loop keyword'', where keyword is the keyword of the 
 sound that you'd like to loop. For example ``loop ringtone'' would play
 the sound with the keyword ``ringtone'' until stopped\footnote{by an
-unbalanced force...\footnote{Oops, this isn't my physics homework!}}.
+unbalanced force...\footnotemark}.
+\footnotetext{Oops, this isn't my physics homework!}
 
 \subsection{Stop Action}
 
@@ -118,7 +119,7 @@ a description (so you know what it does later) and enter some actions. You
 can enter one or more actions, each on a different line.
 
 For example, you may have a part in your show where a baby had been softly
-babbling up to that point, but begins to scream then. For the description
+babbling up to that point, but then begins to scream. For the description
 you might enter ``Baby begins to scream'', and your actions might be:
 \begin{verbatim}
 stop babyBabble
